--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,7 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
-.idea/php.xml
-.idea/r2gHub.iml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/workspace.xml
+.idea
+.idea/*
 .DS_Store
+
